Fix layout bugs on smaller screens
The main issue was that long lines next to the checkboxes/radio buttons
did not wrap. This has now been fixed.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,10 @@
   max-width: 1280px;
 }
 
+mat-card-content {
+  padding: 10px;
+}
+
 #container {
   display: flex;
   justify-content: center;
