--- a/src/app/step/step.component.scss
+++ b/src/app/step/step.component.scss
@@ -1,5 +1,14 @@
 mat-radio-button, mat-checkbox {
   margin: 5px;
+
+}
+
+::ng-deep .mat-radio-label, ::ng-deep .mat-checkbox-label {
+  white-space: normal !important;
+}
+
+::ng-deep .mat-radio-container, ::ng-deep .mat-checkbox-inner-container {
+  margin-top: 4px !important;
 }
 
 mat-radio-group, #checkboxGroup {
